--- a/.github/workflows/reactci.yml
+++ b/.github/workflows/reactci.yml
@@ -8,8 +8,10 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
-
+    runs-on: ${{matrix.os}}
+    strategy:
+        matrix:
+           os: [ubuntu-latest, windows-latest]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -29,4 +31,4 @@ jobs:
         run: npm test --if-present
 
       - name: Build project
-        run: npm run build --if-present
+        run: npm run build --if-present
